# ota-client

./: .cspell.json  .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile.build_image  HTTP2_MIGRATION.md  LICENSE.md  README.md  aw  build_image.sh  design.py  docker-compose.dev.yml  docker-compose.yml  hatch_build_lock_deps.py  pyproject.toml  requirements.txt  sonar-project.properties  tmp.checksum  update_request.yaml  vo
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml  renovate.json5
.github/PULL_REQUEST_TEMPLATE/: feature.md  fix.md  refinement.md  tag.md
.github/tools/: gen_requirements_txt.py
.github/workflows/: build_test_base_images.yaml  claude-code-review.yml  claude.yml  create_release.yml  e2e.yml  gen_requirements_txt.yaml  issue-metrics.yml  lock_file_management.yml  merged.yml  performance_test.yaml  push.yml  release.yml  release_api.yml  release_checklist.yml  release_offline_ota_image_builder.yaml  renovate_auto_merge.yml  sync_lockfile.yaml  test.yaml  test.yml  test_image.yaml  update_lockfile.yaml
app/: _pathloader.py  bank.py  base_error.py  boot_control.py  boto3_session.py  common.py  configs.py  constants.py  copy_tree.py  downloader.py  ecu_info.py  error_code.py  errors.py  exceptions.py  extlinux.py  extlinux_control.py  grpc_client.py  grub_control.py  grub_ota_partition.py  interface.py  log_util.py  logger.py  main.py  main_ecu.py  nv_boot_control.conf.rqx_580  ota_boot.py  ota_client.py  ota_client_call.py  ota_client_interface.py  ota_client_service.py  ota_client_stub.py  ota_error.py  ota_metadata.py  ota_partition.py  ota_status.py  otaclient_pb2.py  otaclient_pb2_grpc.py  otaclient_v2_pb2.py  otaclient_v2_pb2_grpc.py  proxy_info.py  (+3 more)
app/aws_gglog/: boto3_session.py  greengrass_config.py  logger.py
app/boot_control/: __init__.py  _grub.py  cboot.py  common.py  grub.py  interface.py
app/create_standby/: __init__.py  common.py  interface.py  legacy_mode.py  rebuild_mode.py
app/proto/: __init__.py  otaclient_v2_pb2.py  otaclient_v2_pb2.pyi  otaclient_v2_pb2_grpc.py  wrapper.py
app2/: configs.py  copy_parents.py  ecu_info.py  grub_control.py  main.py  ota_client.py  ota_client_call.py  ota_client_service.py  ota_client_stub.py  ota_error.py  ota_metadata.py  ota_partition.py  ota_status.py  otaclient_pb2.py  otaclient_pb2_grpc.py  otaclient_v2_pb2.py  otaclient_v2_pb2_grpc.py
aws-iot-log-server/: aws_iot_logger.py  configs.py  custom_http_handler.py  log_proxy_server.py
aws-iot-log-server/app/: aws_iot_logger.py  boto3_session.py  custom_http_handler.py  greengrass_config.py  http_server.py
aws-iot-log-server/tests/: test_greengrass_config.py
boot/ota/: ecu_info.yaml  ecuinfo.yaml
docker/: docker-compose_tests.yml
docker/app_img/: Dockerfile  README.md
docker/build_image/: Dockerfile
docker/client/: Dockerfile
docker/mini_ota_img/: Dockerfile.ota_img  (+5 more)
docs/: INSTALLATION.md  README.md  SERVICES.md  ota_status_transition.md  update_phase_transition.md
e2e_tests/: Dockerfile_E2E-test-image  Dockerfile_OTA-baseimage  conftest.py  local_test.sh  params_for_test.py  pytest.ini  requirements.txt  test_ota_process.py
emulator/: README.md  config.yml  ecu.py  main.py  ota_client_stub.py  requirements.txt
host-scripts/: build_image.sh
ota_client/: __main__.py
ota_proxy/: README.md  __init__.py  config.py  db.py  ota_cache.py  server_app.py
otaclient/: .gitignore  __init__.py  __main__.py  requirements.txt
otaclient_img/: .gitignore  Dockerfile  README.md
proto/: .gitignore  .proto_hash  Makefile  README.md  hatch_build.py  increment_minor.py  ota_metafiles.proto  otaclient.proto  otaclient_iot_logging_server_pb2-1.0.0-py3-none-any.whl  otaclient_v2.proto  proto_hash.py  pyproject.toml  requirements.txt
proto/pb2/: latest_tag.sh  setup.py
proto/src/otaclient_pb2/: .gitignore  README.md  __init__.py
proto/src/otaclient_pb2/v2/: .gitignore  __init__.py
proto/whl/: otaclient_pb2-0.5.0.33632fb-py3-none-any.whl  otaclient_pb2-0.5.0.80554b2-py3-none-any.whl  otaclient_pb2-0.6.0.80554b2-py3-none-any.whl
samples/: README.md  ecu_info.yaml  otaclient.service  otaclient.service_app  proxy_info.yaml
script/: migration_v2.sh
scripts/: hatch_build_lock_deps.py
src/: .gitignore  _otaclient_version.py
systemd/: ota-client.service  otaclient.service
test/: README.md  conftest.py
test_utils/: api_caller.py  ecu_info.yaml  logutil.py  path_loader.py  setup_ecu.py  status_call.py  update_call.py  update_request.yaml
tests/: Dockerfile_OTA-baseimage  README.md  __init__.py  _fixtures_ota_core.py  conftest.py  grub.cfg.wo_submenu  grub_cfg_params.py  ota_client_params.py  persistents-x1.txt  requirements.txt  test_bank.py  test_boto3_session.py  test_common.py  test_copy_tree.py  test_create_standby.py  test_downloader.py  test_ecu_info.py  test_grub_control.py  test_log_setting.py  test_logger.py  test_logging.py  test_main.py  test_ota_boot.py  test_ota_client-rollback.py  test_ota_client-status.py  test_ota_client-update.py  test_ota_client.py  test_ota_client_call.py  test_ota_client_service.py  test_ota_client_stub.py  test_ota_metadata.py  test_ota_status.py  test_persist_file_handling.py  test_proxy_info.py  test_update_stats.py  utils.py
tests2/: conftest.py  custom.cfg  grub_cfg_params.py  test_copy_parents.py  test_ecu_info.py  test_ota_client-cp.py  test_ota_client-rollback.py  test_ota_client-status.py  test_ota_client-update.py  test_ota_client.py  test_ota_client_rollback.py  test_ota_client_service.py  test_ota_metadata.py
tools/: .gitignore  update_request.yaml
tools/offline_ota_image_builder/: .gitignore  README.md  __main__.py  builder.py  configs.py  manifest.py  pyproject.toml  utils.py
tools/offline_ota_image_builder/src/offline_ota_image_builder/: __main__.py  builder.py  configs.py  main.py  utils.py
tools/offline_ota_image_builder/src/offline_ota_image_builder/ota_metadata/: legacy.py  v1.py
(+694 files in other folders)
