[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "otaclient"
readme = "README.md"
license = { text = "LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "aiofiles<25,>=24.1",
  "aiohttp>=3.10.2,<3.12",
  "cryptography>=43.0.1,<44",
  "grpcio>=1.53.2,<1.68",
  "protobuf>=4.21.12,<5.29",
  "pydantic<3,>=2.6",
  "pydantic-settings<3,>=2.3",
  "pyopenssl<25,>=24.1",
  "pyyaml<7,>=6.0.1",
  "requests<2.33,>=2.32",
  "simple-sqlite3-orm<0.3,>=0.2",
  "typing-extensions>=4.6.3",
  "urllib3<2.3,>=2.2.2",
  "uvicorn[standard]>=0.30,<0.33",
  "zstandard<0.24,>=0.22",
]
optional-dependencies.dev = [
  "black",
  "coverage",
  "pytest==7.1.2",
  "pytest-asyncio==0.23.8",
  "pytest-mock==3.14",
  "requests-mock",
  "ruff",
]
urls.Source = "https://github.com/tier4/ota-client"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/_otaclient_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tools",
  ".github",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "**/.gitignore",
  "**/*README.md",
]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.hatch.envs.dev]
type = "virtual"
features = [
  "dev",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_auto_indent = true
log_format = "%(asctime)s %(levelname)s %(filename)s %(funcName)s,%(lineno)d %(message)s"
log_cli = true
log_cli_level = "INFO"
testpaths = [
  "./tests",
]

[tool.black]
line-length = 88
target-version = [
  'py38',
  'py39',
  'py310',
  'py311',
]
extend-exclude = '''(
  ^.*(_pb2.pyi?|_pb2_grpc.pyi?)$
)'''

[tool.coverage.run]
branch = false
relative_files = true
source = [
  "otaclient",
  "otaclient_api",
  "otaclient_common",
  "ota_metadata",
  "ota_proxy",
]

[tool.coverage.report]
omit = [
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
exclude_also = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
skip_empty = true
skip_covered = true

[tool.pyright]
exclude = [
  "**/__pycache__",
]
ignore = [
  "proto/**",
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
pythonVersion = "3.8"

[tool.ruff]
target-version = "py38"
# NOTE: not include tests and tools for now
include = [
  "tests/**/*.py",
  "src/**/*.py",
  "pyproject.toml",
]
extend-exclude = [
  "*_pb2.py*",
  "*_pb2_grpc.py*",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",   # pyflakes
  "Q",   # flake8-quotes
  "I",   # isort
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "ICN", # flake8-import-conventions
]
ignore = [
  "E266", # (too many leading '#'): sometimes we use multiple # for separting sections
  "E203", # (white space before ':'): this error conflicts with black linting
  "E701", # (multiple statements on one line)
  "S101", # (use of assert): mostly we use assert for typing
]
