[build-system]
build-backend = "hatchling.build"
requires = [
  "grpcio-tools<1.58,>=1.57",
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "otaclient-pb2"
version = "0.7.2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
urls.Source = "https://github.com/tier4/ota-client/proto"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/otaclient_pb2/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "whl",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "**/.gitignore",
  "**/*README.md",
  "whl",
]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.hatch.build.hooks.custom]
proto_builds = [
  { proto_file = "otaclient_v2.proto", output_package = "otaclient_pb2/v2", api_version = "2.1.0" },
]

[tool.black]
line-length = 88
target-version = [
  'py38',
]
extend-exclude = '''(
  ^.*(_pb2.pyi?|_pb2_grpc.pyi?)$
)'''

[tool.isort]
profile = "black"
extend_skip_glob = [
  "*_pb2.py*",
  "_pb2_grpc.py*",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.venv",
]
ignore = [
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
pythonVersion = "3.8"
