[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "offline_ota_image_builder"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
version = "1.0.0"
dependencies = [
  "ota-image-libs@https://github.com/tier4/ota-image-libs/releases/download/v0.3.0/ota_image_libs-0.3.0-py3-none-any.whl#sha256:98a411c53a01f313ddfbfcb8c8d20dcd9ced829c7282a01763c81f25c695d79c",
  "simple-sqlite3-orm>=0.12,<0.14",
]

[dependency-groups]
dev = [
  "pyinstaller>=6,<7",
  "ruff>=0.14,<1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
exclude = [
  "**/.gitignore",
  "**/*README.md",
]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_auto_indent = true
log_format = "%(asctime)s %(levelname)s %(filename)s %(funcName)s,%(lineno)d %(message)s"
log_cli = true
log_cli_level = "INFO"
testpaths = [
  "./tests",
]
markers = [
  "performance: marks tests as performance E2E tests",
]

[tool.coverage.run]
concurrency = [
  "multiprocessing",
  "thread",
]
branch = false
relative_files = true
parallel = true
source = [
  "offline_ota_image_builder"
]
disable_warnings = [
    "no-data-collected",
    "module-not-measured",
    "module-not-imported",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
skip_empty = true
skip_covered = true

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".ruff_cache",
  ".venv",
  "venv",
  ".tests",
]
ignore = [
  "proto/**",
  "scripts",
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.ruff]
line-length = 88
target-version = "py313"
# NOTE: not include tests and tools for now
include = [
  "tests/**/*.py",
  "src/**/*.py",
  "pyproject.toml",
]
extend-exclude = [
  "*_pb2.py*",
  "*_pb2_grpc.py*",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",   # pyflakes
  "Q",   # flake8-quotes
  "I",   # isort
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "ICN", # flake8-import-conventions
]
ignore = [
  "E266", # (too many leading '#'): sometimes we use multiple # for separting sections
  "E203", # (white space before ':'): this error conflicts with black linting
  "E701", # (multiple statements on one line)
  "S101", # (use of assert): mostly we use assert for typing
]

[tool.ruff.lint.pydocstyle]
convention = "google"
